2008-01-27  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/soundtouch/gstpitch.cc:
	* ext/soundtouch/gstpitch.hh:
	Implement LATENCY query and notify about latency changes.
	Unfortunately we don't have a fixed latency but it changes
	a bit with each buffer so we only send an LATENCY event with
	the maximum latency if it changes.

	Always calculate the timestamp, duration, etc from the sample
	rate instead of using a pre-calculated duration for one sample
	to prevent large rounding errors.

2008-01-27  Sebastian Dröge  <slomo@circular-chaos.org>

	Based on a patch by:
	    Hans de Goede <j dot w dot r dot degoede at hhs dot nl>

	* configure.ac:
	* ext/mpeg2enc/gstmpeg2encoder.cc:
	* ext/mpeg2enc/gstmpeg2encpicturereader.cc:
	* ext/mpeg2enc/gstmpeg2encpicturereader.hh:
	Add support for building against mjpegtools 1.9 while keeping
	compatiblity with older versions.

2008-01-27  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/soundtouch/gstbpmdetect.cc:
	Only consider a BPM value above 1.0 as valid.

2008-01-27  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/soundtouch/Makefile.am:
	* ext/soundtouch/gstbpmdetect.cc:
	* ext/soundtouch/gstbpmdetect.hh:
	* ext/soundtouch/plugin.c: (plugin_init):
	Add BPM detection plugin based on SoundTouch's libBPM.

	* ext/soundtouch/gstpitch.cc:
	Allow sample rates until MAX instead of only 48kHz and remove the
	buffer-frames field from that caps.
	Clear the remaining samples completely when necessary to get into
	a clean state again.

2008-01-26  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/filter/gstbpwsinc.c: (gst_bpwsinc_class_init):
	* gst/filter/gstlpwsinc.c: (gst_lpwsinc_class_init):
	Don't implement get_unit_size() ourselves, the GstAudioFilter base
	class already does this for us.

2008-01-26  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/soundtouch/gstpitch.cc:
	Allow seeking only in TIME and DEFAULT format, other formats will
	not work as expected. Also handle a stop position of -1 correctly