@@ -1,6 +1,11 @@
 2008-01-27  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* ext/soundtouch/gstpitch.cc:
+	Don't send a LATENCY event for now until we get the usage right.
+
+2008-01-27  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* ext/soundtouch/gstpitch.cc:
 	* ext/soundtouch/gstpitch.hh:
 	Implement LATENCY query and notify about latency changes.
 	Unfortunately we don't have a fixed latency but it changes
